fix(ADA-1194): Added styling only when X would overlap (#90)
Added styling only when X would overlap

--- a/src/components/moderation/moderation.scss
+++ b/src/components/moderation/moderation.scss
@@ -11,7 +11,8 @@
   color: white;
 
   &.extrasmall,
-  &.small {
+  &.small,
+  &.medium {
     .main-wrapper .title {
       margin-bottom: 12px;
       font-size: 20px;
@@ -38,7 +39,6 @@
       font-weight: 700;
       text-align: left;
       line-height: 32px;
-      padding-right: 44px;
     }
     .selectTitle {
       font-size: 14px;
@@ -46,7 +46,6 @@
       font-weight: 700;
       text-align: left;
       margin-top: 24px;
-      padding-right: 44px;
     }
     .subtitle {
       margin-top: 16px;
